--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^1.8.0",
+    "@codesandbox/sandpack-react": "^1.8.1",
     "@laodeaksarr/design-system": "^1.0.20",
+    "@mantine/form": "^5.4.1",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
-    "@tanstack/react-query": "^4.3.9",
+    "@tanstack/react-query": "^4.6.1",
     "@trpc/client": "10.0.0-proxy-beta.2",
     "@trpc/next": "10.0.0-proxy-beta.2",
     "@trpc/react": "10.0.0-proxy-beta.2",
     "@trpc/server": "10.0.0-proxy-beta.2",
-    "framer-motion": "^7.3.6",
+    "focus-trap-react": "^10.0.0",
+    "framer-motion": "^7.4.0",
     "next": "12.3.1",
-    "next-auth": "^4.10.2",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -31,8 +33,8 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "prisma": "^4.1.0",
